# maman15

./: .gitignore  README.md  database.db  main.py  server.py
boost/1.79.0_2/: INSTALL_RECEIPT.json
boost/1.79.0_2/.brew/: boost.rb
client/: AESWrapper.cpp  AESWrapper.h  CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  FIleHandler.h  FileHandler.cpp  NetworkManager.cpp  NetworkManager.h  RSAWrapper.h  client.cpp  client.h  main.cpp  protocol.h
client_demo/: request_server.py
cryptopp870/: a.out
server/: \files\2f6ea1e9-1d21-40a2-ab4a-ed7767a85d99\cool_file.txt  database.db  database.py  filemanager.py  main.py  networkmanager.py  request.py  requirements.txt  response.py  servermanager.py  storage_on_memory.py  utils.py
